--- a/config-manager/config-web/src/main/webapp/resources/css/jquery.steps.css
+++ b/config-manager/config-web/src/main/webapp/resources/css/jquery.steps.css
@@ -140,11 +140,12 @@
     background: #eee;
     display: block;
     margin: 0.5em;
-    min-height: 36em;
+    min-height: 429px;
     /*overflow: hidden;*/
     position: relative;
     width: auto;
-    overflow: scroll;
+    /*overflow: scroll;*/
+    overflow-y: scroll;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -163,7 +164,7 @@
     float: left;
     position: absolute;
     width: 100%;
-    height: 95%;
+    height: 70%;
     padding: 2.5%;
 }
 
